# job-hunt-copilot

./: .gitignore  CLAUDE.md  README.md  build.sh  filter.lua  fit.py  letter.css  pyproject.toml  render_variants.py  style.css  template-letter.html  template.html  verify_lines.py  verify_pages.py
job-description-scan/: CLAUDE.md  pyproject.toml
job-description-scan/examples/: example_scan.py
job-description-scan/job_description_scan/: __main__.py  cli.py  config.py  output.py  pipeline.py  ranking.py
job-description-scan/job_description_scan/boards/: __init__.py  ashby.py  greenhouse.py  lever.py  smartrecruiters.py  workday.py
referral-prioritizer/: CLAUDE.md  pyproject.toml
referral-prioritizer/referral_prioritizer/: discovery.py  extract.py  scan.py  stats.py
resume-printer/: CLAUDE.md  build.sh  filter.lua  pyproject.toml  template.html
