[project]
name = "job-description-scan"
version = "0.1.0"
description = "Scrape Greenhouse/Ashby job boards and run LLM extraction with per-scan Pydantic schemas."
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2",
    "httpx>=0.27",
    "choix>=0.4.1",
    "rapidfuzz>=3.14.5",
]
