[project]
name = "job-description-scan"
version = "0.1.0"
description = "Scrape Greenhouse/Ashby/Lever job boards and run LLM extraction with per-scan Pydantic schemas."
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2",
    "httpx>=0.27",
    "choix>=0.4.1",
    "rapidfuzz>=3.14.5",
]

# Installable as a dependency (e.g. a content repo pinning this engine via a
# path/git source); scan configs stay outside the package and are imported
# from the caller's cwd.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["job_description_scan"]
